// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test CustomRuleList should match snapshot 1`] = `
<div>
  <form
    class="ant-form ant-form-horizontal"
  >
    <div
      class="ant-row"
      style="margin-left: -12px; margin-right: -12px;"
    >
      <div
        class="ant-col ant-col-xs-24 ant-col-sm-12 ant-col-xl-8 ant-col-xxl-6"
        style="padding-left: 12px; padding-right: 12px;"
      >
        <div
          class="ant-form-item"
        >
          <div
            class="ant-row ant-form-item-row"
          >
            <div
              class="ant-col ant-form-item-label"
            >
              <label
                class=""
                for="dbType"
                title="customRule.filterForm.databaseType"
              >
                customRule.filterForm.databaseType
              </label>
            </div>
            <div
              class="ant-col ant-form-item-control"
            >
              <div
                class="ant-form-item-control-input"
              >
                <div
                  class="ant-form-item-control-input-content"
                >
                  <div
                    class="ant-select ant-select-in-form-item ant-select-single ant-select-allow-clear ant-select-show-arrow"
                  >
                    <div
                      class="ant-select-selector"
                    >
                      <span
                        class="ant-select-selection-search"
                      >
                        <input
                          aria-activedescendant="dbType_list_0"
                          aria-autocomplete="list"
                          aria-controls="dbType_list"
                          aria-haspopup="listbox"
                          aria-owns="dbType_list"
                          autocomplete="off"
                          class="ant-select-selection-search-input"
                          id="dbType"
                          readonly=""
                          role="combobox"
                          style="opacity: 0;"
                          type="search"
                          unselectable="on"
                          value=""
                        />
                      </span>
                      <span
                        class="ant-select-selection-placeholder"
                      />
                    </div>
                    <span
                      aria-hidden="true"
                      class="ant-select-arrow"
                      style="user-select: none;"
                      unselectable="on"
                    >
                      <span
                        aria-label="down"
                        class="anticon anticon-down ant-select-suffix"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="down"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                          />
                        </svg>
                      </span>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-col ant-col-xs-24 ant-col-sm-12 ant-col-xl-8 ant-col-xxl-6"
        style="padding-left: 12px; padding-right: 12px;"
      >
        <div
          class="ant-form-item"
        >
          <div
            class="ant-row ant-form-item-row"
          >
            <div
              class="ant-col ant-form-item-label"
            >
              <label
                class=""
                for="ruleName"
                title="customRule.filterForm.ruleName"
              >
                customRule.filterForm.ruleName
              </label>
            </div>
            <div
              class="ant-col ant-form-item-control"
            >
              <div
                class="ant-form-item-control-input"
              >
                <div
                  class="ant-form-item-control-input-content"
                >
                  <span
                    class="ant-input-group-wrapper ant-input-search"
                  >
                    <span
                      class="ant-input-wrapper ant-input-group"
                    >
                      <input
                        class="ant-input"
                        id="ruleName"
                        placeholder="common.form.placeholder.searchInput"
                        type="text"
                        value=""
                      />
                      <span
                        class="ant-input-group-addon"
                      >
                        <button
                          class="ant-btn ant-btn-default ant-btn-icon-only ant-input-search-button"
                          type="button"
                        >
                          <span
                            aria-label="search"
                            class="anticon anticon-search"
                            role="img"
                          >
                            <svg
                              aria-hidden="true"
                              data-icon="search"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="64 64 896 896"
                              width="1em"
                            >
                              <path
                                d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0011.6 0l43.6-43.5a8.2 8.2 0 000-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z"
                              />
                            </svg>
                          </span>
                        </button>
                      </span>
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-col text-align-right ant-col-xs-24 ant-col-sm-12 ant-col-sm-offset-12 ant-col-xl-8 ant-col-xl-offset-0 ant-col-xxl-6 ant-col-xxl-offset-6"
        style="padding-left: 12px; padding-right: 12px;"
      >
        <div
          class="ant-form-item"
        >
          <div
            class="ant-row ant-form-item-row"
          >
            <div
              class="ant-col ant-col-24 ant-form-item-control"
            >
              <div
                class="ant-form-item-control-input"
              >
                <div
                  class="ant-form-item-control-input-content"
                >
                  <button
                    class="ant-btn ant-btn-primary"
                    type="button"
                  >
                    <a
                      href="/rule/custom/create"
                    >
                      customRule.filterForm.add
                    </a>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </form>
  <div
    class="ant-tabs ant-tabs-top"
  >
    <div
      class="ant-tabs-nav"
      role="tablist"
    >
      <div
        class="ant-tabs-nav-wrap"
      >
        <div
          class="ant-tabs-nav-list"
          style="transform: translate(0px, 0px);"
        >
          <div
            class="ant-tabs-tab ant-tabs-tab-active"
            data-node-key="ALL"
          >
            <div
              aria-controls="rc-tabs-test-panel-ALL"
              aria-selected="true"
              class="ant-tabs-tab-btn"
              id="rc-tabs-test-tab-ALL"
              role="tab"
              tabindex="0"
            >
              ALL
               
              (0)
            </div>
          </div>
          <div
            class="ant-tabs-ink-bar ant-tabs-ink-bar-animated"
          />
        </div>
      </div>
      <div
        class="ant-tabs-nav-operations ant-tabs-nav-operations-hidden"
      >
        <button
          aria-controls="rc-tabs-test-more-popup"
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-hidden="true"
          class="ant-tabs-nav-more"
          id="rc-tabs-test-more"
          style="visibility: hidden; order: 1;"
          tabindex="-1"
          type="button"
        >
          <span
            aria-label="ellipsis"
            class="anticon anticon-ellipsis"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="ellipsis"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M176 511a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0z"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
    <div
      class="ant-tabs-content-holder"
    >
      <div
        class="ant-tabs-content ant-tabs-content-top"
      >
        <div
          aria-hidden="false"
          aria-labelledby="rc-tabs-test-tab-ALL"
          class="ant-tabs-tabpane ant-tabs-tabpane-active"
          id="rc-tabs-test-panel-ALL"
          role="tabpanel"
          tabindex="0"
        >
          <div
            class="ant-list ant-list-split ant-list-loading rule-list-namespace"
          >
            <div
              class="ant-spin-nested-loading"
            >
              <div>
                <div
                  aria-busy="true"
                  aria-live="polite"
                  class="ant-spin ant-spin-spinning"
                >
                  <span
                    class="ant-spin-dot ant-spin-dot-spin"
                  >
                    <i
                      class="ant-spin-dot-item"
                    />
                    <i
                      class="ant-spin-dot-item"
                    />
                    <i
                      class="ant-spin-dot-item"
                    />
                    <i
                      class="ant-spin-dot-item"
                    />
                  </span>
                </div>
              </div>
              <div
                class="ant-spin-container ant-spin-blur"
              >
                <div
                  style="min-height: 53px;"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`test CustomRuleList should match snapshot 2`] = `
<div>
  <form
    class="ant-form ant-form-horizontal"
  >
    <div
      class="ant-row"
      style="margin-left: -12px; margin-right: -12px;"
    >
      <div
        class="ant-col ant-col-xs-24 ant-col-sm-12 ant-col-xl-8 ant-col-xxl-6"
        style="padding-left: 12px; padding-right: 12px;"
      >
        <div
          class="ant-form-item"
        >
          <div
            class="ant-row ant-form-item-row"
          >
            <div
              class="ant-col ant-form-item-label"
            >
              <label
                class=""
                for="dbType"
                title="customRule.filterForm.databaseType"
              >
                customRule.filterForm.databaseType
              </label>
            </div>
            <div
              class="ant-col ant-form-item-control"
            >
              <div
                class="ant-form-item-control-input"
              >
                <div
                  class="ant-form-item-control-input-content"
                >
                  <div
                    class="ant-select ant-select-in-form-item ant-select-single ant-select-allow-clear ant-select-show-arrow"
                  >
                    <div
                      class="ant-select-selector"
                    >
                      <span
                        class="ant-select-selection-search"
                      >
                        <input
                          aria-activedescendant="dbType_list_0"
                          aria-autocomplete="list"
                          aria-controls="dbType_list"
                          aria-haspopup="listbox"
                          aria-owns="dbType_list"
                          autocomplete="off"
                          class="ant-select-selection-search-input"
                          id="dbType"
                          readonly=""
                          role="combobox"
                          style="opacity: 0;"
                          type="search"
                          unselectable="on"
                          value=""
                        />
                      </span>
                      <span
                        class="ant-select-selection-placeholder"
                      />
                    </div>
                    <span
                      aria-hidden="true"
                      class="ant-select-arrow"
                      style="user-select: none;"
                      unselectable="on"
                    >
                      <span
                        aria-label="down"
                        class="anticon anticon-down ant-select-suffix"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="down"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                          />
                        </svg>
                      </span>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-col ant-col-xs-24 ant-col-sm-12 ant-col-xl-8 ant-col-xxl-6"
        style="padding-left: 12px; padding-right: 12px;"
      >
        <div
          class="ant-form-item"
        >
          <div
            class="ant-row ant-form-item-row"
          >
            <div
              class="ant-col ant-form-item-label"
            >
              <label
                class=""
                for="ruleName"
                title="customRule.filterForm.ruleName"
              >
                customRule.filterForm.ruleName
              </label>
            </div>
            <div
              class="ant-col ant-form-item-control"
            >
              <div
                class="ant-form-item-control-input"
              >
                <div
                  class="ant-form-item-control-input-content"
                >
                  <span
                    class="ant-input-group-wrapper ant-input-search"
                  >
                    <span
                      class="ant-input-wrapper ant-input-group"
                    >
                      <input
                        class="ant-input"
                        id="ruleName"
                        placeholder="common.form.placeholder.searchInput"
                        type="text"
                        value=""
                      />
                      <span
                        class="ant-input-group-addon"
                      >
                        <button
                          class="ant-btn ant-btn-default ant-btn-icon-only ant-input-search-button"
                          type="button"
                        >
                          <span
                            aria-label="search"
                            class="anticon anticon-search"
                            role="img"
                          >
                            <svg
                              aria-hidden="true"
                              data-icon="search"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="64 64 896 896"
                              width="1em"
                            >
                              <path
                                d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0011.6 0l43.6-43.5a8.2 8.2 0 000-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z"
                              />
                            </svg>
                          </span>
                        </button>
                      </span>
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-col text-align-right ant-col-xs-24 ant-col-sm-12 ant-col-sm-offset-12 ant-col-xl-8 ant-col-xl-offset-0 ant-col-xxl-6 ant-col-xxl-offset-6"
        style="padding-left: 12px; padding-right: 12px;"
      >
        <div
          class="ant-form-item"
        >
          <div
            class="ant-row ant-form-item-row"
          >
            <div
              class="ant-col ant-col-24 ant-form-item-control"
            >
              <div
                class="ant-form-item-control-input"
              >
                <div
                  class="ant-form-item-control-input-content"
                >
                  <button
                    class="ant-btn ant-btn-primary"
                    type="button"
                  >
                    <a
                      href="/rule/custom/create"
                    >
                      customRule.filterForm.add
                    </a>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </form>
  <div
    class="ant-tabs ant-tabs-top"
  >
    <div
      class="ant-tabs-nav"
      role="tablist"
    >
      <div
        class="ant-tabs-nav-wrap"
      >
        <div
          class="ant-tabs-nav-list"
          style="transform: translate(0px, 0px);"
        >
          <div
            class="ant-tabs-tab ant-tabs-tab-active"
            data-node-key="ALL"
          >
            <div
              aria-controls="rc-tabs-test-panel-ALL"
              aria-selected="true"
              class="ant-tabs-tab-btn"
              id="rc-tabs-test-tab-ALL"
              role="tab"
              tabindex="0"
            >
              ALL
               
              (2)
            </div>
          </div>
          <div
            class="ant-tabs-tab"
            data-node-key="rule_type1"
          >
            <div
              aria-controls="rc-tabs-test-panel-rule_type1"
              aria-selected="false"
              class="ant-tabs-tab-btn"
              id="rc-tabs-test-tab-rule_type1"
              role="tab"
              tabindex="0"
            >
              rule_type1
               
              (1)
            </div>
          </div>
          <div
            class="ant-tabs-tab"
            data-node-key="rule_type2"
          >
            <div
              aria-controls="rc-tabs-test-panel-rule_type2"
              aria-selected="false"
              class="ant-tabs-tab-btn"
              id="rc-tabs-test-tab-rule_type2"
              role="tab"
              tabindex="0"
            >
              rule_type2
               
              (1)
            </div>
          </div>
          <div
            class="ant-tabs-ink-bar ant-tabs-ink-bar-animated"
            style="left: 0px; width: 0px;"
          />
        </div>
      </div>
      <div
        class="ant-tabs-nav-operations ant-tabs-nav-operations-hidden"
      >
        <button
          aria-controls="rc-tabs-test-more-popup"
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-hidden="true"
          class="ant-tabs-nav-more"
          id="rc-tabs-test-more"
          style="visibility: hidden; order: 1;"
          tabindex="-1"
          type="button"
        >
          <span
            aria-label="ellipsis"
            class="anticon anticon-ellipsis"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="ellipsis"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M176 511a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0z"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
    <div
      class="ant-tabs-content-holder"
    >
      <div
        class="ant-tabs-content ant-tabs-content-top"
      >
        <div
          aria-hidden="false"
          aria-labelledby="rc-tabs-test-tab-ALL"
          class="ant-tabs-tabpane ant-tabs-tabpane-active"
          id="rc-tabs-test-panel-ALL"
          role="tabpanel"
          tabindex="0"
        >
          <div
            class="ant-list ant-list-split rule-list-namespace"
          >
            <div
              class="ant-spin-nested-loading"
            >
              <div>
                <div
                  aria-busy="true"
                  aria-live="polite"
                  class="ant-spin ant-spin-spinning"
                >
                  <span
                    class="ant-spin-dot ant-spin-dot-spin"
                  >
                    <i
                      class="ant-spin-dot-item"
                    />
                    <i
                      class="ant-spin-dot-item"
                    />
                    <i
                      class="ant-spin-dot-item"
                    />
                    <i
                      class="ant-spin-dot-item"
                    />
                  </span>
                </div>
              </div>
              <div
                class="ant-spin-container ant-spin-blur"
              >
                <ul
                  class="ant-list-items"
                >
                  <li
                    class="ant-list-item"
                  >
                    <div
                      class="ant-list-item-meta"
                    >
                      <div
                        class="ant-list-item-meta-avatar"
                      >
                        <div
                          class="ant-space ant-space-vertical ant-space-align-center sqle-rule-icon"
                        >
                          <div
                            class="ant-space-item"
                            style="margin-bottom: 1px;"
                          >
                            <div>
                              <span
                                aria-label="info-circle"
                                class="anticon anticon-info-circle"
                                role="img"
                                style="font-size: 25px; color: rgb(50, 130, 230);"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="info-circle"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                                  />
                                  <path
                                    d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                                  />
                                </svg>
                              </span>
                            </div>
                          </div>
                          <div
                            class="ant-space-item"
                          >
                            <span
                              class="ant-typography ant-typography-secondary"
                            >
                              notice
                            </span>
                          </div>
                        </div>
                      </div>
                      <div
                        class="ant-list-item-meta-content"
                      >
                        <h4
                          class="ant-list-item-meta-title"
                        >
                          name1
                        </h4>
                        <div
                          class="ant-list-item-meta-description"
                        >
                          <span
                            class="ant-typography ant-typography-secondary ant-typography-ellipsis ant-typography-single-line ant-typography-ellipsis-single-line"
                            style="max-width: 500px;"
                          >
                            desc desc desc
                          </span>
                        </div>
                      </div>
                    </div>
                    <div
                      class="ant-col"
                      style="flex: 0 0 20%;"
                    />
                    <ul
                      class="ant-list-item-action"
                    >
                      <li>
                        <button
                          class="ant-btn ant-btn-link"
                          type="button"
                        >
                          <a
                            href="/rule/custom/update/1"
                          >
                            customRule.editRule
                          </a>
                        </button>
                        <em
                          class="ant-list-item-action-split"
                        />
                      </li>
                      <li>
                        <button
                          class="ant-btn ant-btn-link ant-btn-dangerous"
                          type="button"
                        >
                          <span>
                            customRule.deleteRule
                          </span>
                        </button>
                      </li>
                    </ul>
                  </li>
                  <li
                    class="ant-list-item"
                  >
                    <div
                      class="ant-list-item-meta"
                    >
                      <div
                        class="ant-list-item-meta-avatar"
                      >
                        <div
                          class="ant-space ant-space-vertical ant-space-align-center sqle-rule-icon"
                        >
                          <div
                            class="ant-space-item"
                            style="margin-bottom: 1px;"
                          >
                            <div>
                              <span
                                aria-label="info-circle"
                                class="anticon anticon-info-circle"
                                role="img"
                                style="font-size: 25px; color: rgb(240, 0, 0);"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="info-circle"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                                  />
                                  <path
                                    d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                                  />
                                </svg>
                              </span>
                            </div>
                          </div>
                          <div
                            class="ant-space-item"
                          >
                            <span
                              class="ant-typography ant-typography-secondary"
                            >
                              error
                            </span>
                          </div>
                        </div>
                      </div>
                      <div
                        class="ant-list-item-meta-content"
                      >
                        <h4
                          class="ant-list-item-meta-title"
                        >
                          name2
                        </h4>
                        <div
                          class="ant-list-item-meta-description"
                        >
                          <span
                            class="ant-typography ant-typography-secondary ant-typography-ellipsis ant-typography-single-line ant-typography-ellipsis-single-line"
                            style="max-width: 500px;"
                          >
                            desc desc desc
                          </span>
                        </div>
                      </div>
                    </div>
                    <div
                      class="ant-col"
                      style="flex: 0 0 20%;"
                    />
                    <ul
                      class="ant-list-item-action"
                    >
                      <li>
                        <button
                          class="ant-btn ant-btn-link"
                          type="button"
                        >
                          <a
                            href="/rule/custom/update/2"
                          >
                            customRule.editRule
                          </a>
                        </button>
                        <em
                          class="ant-list-item-action-split"
                        />
                      </li>
                      <li>
                        <button
                          class="ant-btn ant-btn-link ant-btn-dangerous"
                          type="button"
                        >
                          <span>
                            customRule.deleteRule
                          </span>
                        </button>
                      </li>
                    </ul>
                  </li>
                </ul>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
